FEAT: Add cloud upload Widget

--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.5",
     "@astrojs/check": "^0.9.4",
+    "astro": "^4.16.5",
+    "astro-cloudinary": "^1.1.2",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "standard": "^17.1.2"
   }
 }
