--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.4",
     "astro": "^4.16.5",
     "astro-cloudinary": "^1.1.2",
+    "two-up-element": "^1.0.1",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
